SparePart parser and small changes
- Finished JavaDocs for RepairServiceImpl
- Added setters for SparePart
- Added SparePartParser
- Added PostMethod for reading a file with NewSpareParts